--- a/package.json
+++ b/package.json
@@ -1,35 +1,69 @@
 {
-  "name": "my-expo-app",
+  "name": "launchpad-explorer",
   "version": "1.0.0",
+  "main": "expo-router/entry",
   "scripts": {
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "start": "expo start",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "start": "expo start --dev-client",
     "prebuild": "expo prebuild",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
+    "test": "jest",
     "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "types": "tsc --noEmit",
+    "prepare": "husky && husky install"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
     "expo": "^53.0.11",
+    "expo-linking": "^7.1.5",
+    "expo-router": "^5.0.7",
     "expo-status-bar": "~2.2.3",
-    "nativewind": "latest",
+    "lucide-react-native": "^0.514.0",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-native": "0.79.3",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0"
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "^4.11.1",
+    "react-native-svg": "15.11.2",
+    "zod": "^3.25.57"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.27.4",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/react-native": "^13.2.0",
+    "@types/axios": "^0.14.4",
+    "@types/jest": "^29.5.14",
     "@types/react": "~19.0.10",
+    "axios-mock-adapter": "^2.1.0",
+    "babel-jest": "^30.0.0",
+    "eas-cli": "^16.9.0",
     "eslint": "^9.25.1",
-    "eslint-config-expo": "^9.2.0",
+    "eslint-config-expo": "9.2.0",
     "eslint-config-prettier": "^10.1.2",
+    "husky": "^8.0.0",
+    "jest": "~29.7.0",
+    "jest-expo": "^53.0.7",
+    "lint-staged": "^16.1.0",
+    "metro": "0.82.0",
+    "metro-config": "0.82.0",
+    "metro-resolver": "0.82.0",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.0",
+    "react-test-renderer": "19.0.0",
+    "tailwindcss": "3.3.2",
+    "ts-jest": "^29.3.4",
     "typescript": "~5.8.3"
   },
-  "main": "node_modules/expo/AppEntry.js",
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
+  },
   "private": true
 }
