--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "jsx": "react-jsx",
-
-    "baseUrl": ".",
-    "paths": {
-      "~/*": ["src/*"]
-    }
-  }
+    "types": ["nativewind/types", "jest"]
+  },
+  "include": ["app", "src", "global.d.ts", "nativewind-env.d.ts"]
 }
